# guardrails-lm

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
docs/: failure-analysis-v2.md  pii-secrets-detection.md
scripts/: analyse_v2_failures.py
src/guardrails/: __init__.py  calibration.py  cli.py  compare.py  config.py  data.py  eval.py  export.py  infer.py  model.py  ood.py  server.py  train.py
src/guardrails/static/: index.html
src/guardrails/static/examples/benign/: 02-fibonacci.txt  03-photosynthesis.txt  04-translate-japanese.txt  05-pride-prejudice.txt  06-sqlite-vs-postgres.txt  07-vegetarian-lasagne.txt  08-systemd-restart.txt  09-tech-manual.txt
src/guardrails/static/examples/jailbreak/: 01-ignore-reveal.txt  02-dan.txt  03-disregard-guidelines.txt  04-grandmother-napalm.txt  05-developer-mode.txt  06-evilbot-keylogger.txt  07-system-disable-filters.txt  08-french-bypass.txt  09-wormbot.txt  10-shadow-core.txt  11-le-wat.txt  12-packages.txt  13-think-bad-things.txt
tests/: test_calibration.py  test_compare.py  test_config.py  test_data.py  test_export.py  test_model_helpers.py  test_ood.py  test_server.py  test_train.py
